PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-71_addition_gauche_invalid/gcc-compile.txt
input.c:4:8: error: expression is not assignable
    a+b=b;
    ~~~^
1 error generated.

return code: 1
